@@ -3,6 +3,8 @@ xx/xx/2006 - 1.13.1-WIP
 	- Fix bug in ntfs_attr_pwrite() when we sometimes lose current run in
 	  the runlist.  (Yura)
 	- Fix build with --disable-gnome-vfs --enable-fuse-module.  (Gentoo)
+	- ntfscluster: identify files even if their clusters aren't set
+	  in $Bitmap (useful to find potentially corrupted files). (Szaka)
 
 27/02/2006 - 1.13.0 - Lots and lots and lots of fixes and enhancements.
 
